fix: 视频播放样式触发顺序及z-index的bug修复

--- a/src/styles/_device.scss
+++ b/src/styles/_device.scss
@@ -456,7 +456,7 @@
         top: 6px;
         height: 28px;
         overflow: hidden;
-        z-index: 11;
+        z-index: 6;
         .el-date-editor {
           .el-input__inner {
             background: #555;
@@ -494,7 +494,7 @@
         display: flex;
         flex: 1;
         flex-direction: column;
-        z-index: 12;
+        z-index: 7;
       }
       .replay-time-list {
         background: #fff;
@@ -508,7 +508,7 @@
       width: 100%;
       height: 40px;
       background: rgba(0, 0, 0, 0.5);
-      z-index: 10;
+      z-index: 5;
     }
     .screen__tools {
       position: absolute;
